    only request that.  This also means we're not trying to guess how
    much space we can reasonably take up with the map, but rather
    letting the rest of the interface determine the width and height of
    the installer window.
  * If the screen resolution is particularly low (< 600px height), allow
    the user to scroll through the user setup page content.

  [ Colin Watson ]
  * Fix choose_partition thawing to handle free space at the end of
    update_partitions (LP: #527848).

 -- Evan Dandrea <evand@ubuntu.com>  Thu, 25 Feb 2010 12:50:49 +0000

ubiquity (2.1.28) lucid; urgency=low

  [ Evan Dandrea ]
  * Copy oem-config debconf questions only after we're done using the
    database.

  [ Mario Limonciello ]
  * Don't mistakenly always show ubiquity running in debug mode warning in
    oem-config mode.

  [ Colin Watson ]
  * KDE frontend:
    - Fix partman component for use_as signature change (LP: #527468).
    - on_partitionResized needs a self argument (LP: #527457).

  [ Jonathan Riddell ]
  * kde_ui.py: Always show progressDialog during the install stage (LP:
    #527448)

 -- Colin Watson <cjwatson@ubuntu.com>  Thu, 25 Feb 2010 12:37:09 +0000

ubiquity (2.1.27) lucid; urgency=low

  * Check whether choose_partition should be thawed when going back from
    scanning a non-resizable partition (LP: #527057).
  * devkit-disks was renamed to udisks; try to inhibit that first.

 -- Colin Watson <cjwatson@ubuntu.com>  Wed, 24 Feb 2010 15:08:00 +0000

ubiquity (2.1.26) lucid; urgency=low

  [ Evan Dandrea ]
  * Specify migrationassistant's order as simply coming before summary,
    as setting it as coming after user-setup and partman was causing it
    to come after summary (LP: #526581).

  [ Jonathan Riddell ]
  * kde_ui.py: don't show integrated progress bar, it seems to cause a crash
    https://launchpad.net/bugs/526534
  * kde_ui.py: Show progressDialog for install, still needed (LP: #526454)
