@@ -16,6 +16,8 @@ ubiquity (2.1.29) UNRELEASED; urgency=low
     the installer window.
   * If the screen resolution is particularly low (< 600px height), allow
     the user to scroll through the user setup page content.
+  * Left-align the labels on the segmented_bars.
+  * Make the segmented_bars narrower.
 
   [ Colin Watson ]
   * Fix choose_partition thawing to handle free space at the end of
